welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:21: error: type mismatch;
 found   : Int
 required: java.awt.Color
	setCouleurBrosse(i);
                         ^